# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_screen/distributedscreen.gni")

module_out_path = "distributed_screen/source_trans_test"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//third_party/json/include",
    "//utils/system/safwk/native/include",
    "${fwk_common_path}/utils/include",
    "${fwk_utils_path}/include",
  ]

  include_dirs += [
    "./include",
    "${services_path}/screentransport/test/unittest/screentranstestutils/include",
    "${common_path}/include",
    "${services_path}/common/databuffer/include",
    "${services_path}/common/screen_channel/include",
    "${services_path}/common/utils/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include",
    "${interfaces_path}/innerkits/native_cpp/screen_source/include/callback",
    "${interfaces_path}/innerkits/native_cpp/test/unittest/screensourcetest/include",
    "${interfaces_path}/innerkits/native_cpp/test/unittest/screensourcetest/include/callback",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]
}

## UnitTest ScreenSourceTest
ohos_unittest("ScreenSourceTest") {
  module_out_path = module_out_path

  sources = [
    "${interfaces_path}/innerkits/native_cpp/test/unittest/screensourcetest/src/callback/dscreen_source_callback_test.cpp",
    "${interfaces_path}/innerkits/native_cpp/test/unittest/screensourcetest/src/dscreen_source_handler_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${interfaces_path}/innerkits/native_cpp/screen_source:distributed_screen_source_sdk",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}

group("screen_source_test") {
  testonly = true
  deps = [ ":ScreenSourceTest" ]
}
